Change receipt to Item (Network update). Added new doc sections
